@@ -95,7 +95,7 @@ class PrimefacesExtensionsProcessor {
 
         // methods
         reflectiveClass.produce(
-                new ReflectiveClassBuildItem(true, true, classNames.toArray(new String[classNames.size()])));
+                new ReflectiveClassBuildItem(true, true, classNames.toArray(new String[0])));
 
         // neither
         reflectiveClass.produce(new ReflectiveClassBuildItem(false, false,
@@ -111,7 +111,7 @@ class PrimefacesExtensionsProcessor {
                     .getClassesInPackage(aPackage)
                     .stream()
                     .map(ClassInfo::toString)
-                    .collect(Collectors.toList());
+                    .toList();
             classes.addAll(packageClasses);
         }
         return classes;
